fixed clickable menu on mobile

--- a/assets/css/2-modules/_header.sass
+++ b/assets/css/2-modules/_header.sass
@@ -41,6 +41,7 @@ header.outside_wrapper
 		background: #484547
 		transform: translateY(-100%)
 		transition: all 0.3s ease-in-out
+		z-index: 2
 
 		ul
 			list-style: none
@@ -50,11 +51,14 @@ header.outside_wrapper
 				text-align: center
 				display: block
 				margin-left: 0px
-				margin-bottom: 15px
+				margin-top: 10px
+				margin-bottom: 20px
 			a 
 				font-family: 'Open Sans Condensed', sans-serif;
 				font-size: 19px
 				text-decoration: none
+				width: 100%
+     			height: 100%
 				color: black
 
 	.mobile_navigation_button
